# Go-To-Sleep-Revengeance

./: .dockerignore  .gitignore  Dockerfile  README.md  dev.example.env  pyproject.toml  requirements.txt  sleepydb_setup.sql  sleepydb_setup_mysql.sql
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  docker.yml  main.yml  test.yml
source/: bot.py  goodbye.txt
source/gotosleep/: __init__.py  pings.py  setup.py  times.py
source/gotosleep/cogs/: misc.py
source/gotosleep/tracing/: __init__.py  opentelemetry.py
source/gtssetupfiles/: databasefile.py
test/: __init__.py  test_argparser.py  test_misc_cog.py  test_pings.py  test_times.py
tests/: argparser_test.py
